feat: charts & else APIs
